src/0.setup/k8s/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "0"
  name: setup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: setup
  template:
    metadata:
      labels:
        app: setup
    spec:
      volumes:
        - name: configmap-volume
          configMap:
            name: 0.setup-configmap
        - name: setup-sh
          hostPath:
            path: /home/0.setup/setup
            type: File
        - name: setup-bat
          hostPath:
            path: /home/0.setup/setup.bat
            type: File
      containers:
        - name: setup
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - {protocol: TCP, containerPort: 80}
          volumeMounts:
            - {name: configmap-volume, subPath: default.conf, mountPath: /etc/nginx/conf.d/default.conf}
            - {name: configmap-volume, subPath: nginx.conf,   mountPath: /etc/nginx/nginx.conf}
            - {name: setup-sh,                                mountPath: /usr/share/nginx/html/setup}
            - {name: setup-bat,                               mountPath: /usr/share/nginx/html/setup.bat}

---
apiVersion: v1
kind: Service
metadata:
  namespace: "0"
  name: setup
spec:
  type: LoadBalancer
  selector:
    app: setup
  ports:
    - {protocol: TCP, port: 80}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "0"
  name: setup
spec:
  rules:
    - host: setup.0
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: setup
                port:
                  number: 80
